# BadRep

./: .flake8  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  REQUIREMENTS.md  SECURITY.md  TODO.md  demo_github_integration.py  findings.json  github_findings.json  ground_truth_clean.jsonl  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_api.txt  sample_findings.json  setup.py  spec.md  start_api_server.py  task.md  test_api.py  test_github_comments.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  main.py
core/: __init__.py  api_server.py  bug_injection.py  bug_templates.py  config.py  errors.py  evaluation.py  git_operations.py  github_comments.py  github_integration.py  models.py  pr_workflow.py  report_generator.py
core/plugins/: __init__.py  base.py  go.py  java.py  javascript.py  python.py
docs/: API.md  COMPLETION_CHECKLIST.md  PHASE_11_AGENTIC_FEATURES.md  TUTORIAL.md
plugins/languages/: __init__.py
scripts/: benchmark.py
src/go/: README.md  calculator.go  calculator_test.go  go.mod
src/java/: README.md  pom.xml
src/javascript/: README.md  package-lock.json  package.json
src/javascript/src/: calculator.js
src/javascript/tests/: calculator.test.js
src/python/: README.md  requirements.txt
src/python/src/: calculator.py
src/python/tests/: test_calculator.py
tests/integration/: test_cli_integration.py
tests/unit/: test_bug_injection.py  test_bug_templates.py  test_cli.py  test_cli_simple.py  test_config.py  test_errors.py  test_evaluation.py  test_git_operations.py  test_github_integration.py  test_pr_workflow.py  test_report_generator.py
tooling/: config.yaml
tooling/bug_templates/: __init__.py  bug_taxonomy.yaml
tooling/bug_templates/go/: __init__.py  (+1 more)
(+8 files in other folders)
